--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,15 +4,6 @@
 # allow Indexes
 Options +Indexes
 
-# Order Deny,Allow
-# Deny from all
 
-# Allow from private IP ranges
-# Allow from 10.0.0.0/8
-Allow from 172.16.0.0/12
-# Allow from 192.168.0.0/16
-
-# Quickpay - callback
-
-# Allow from vezit.net
-# Allow from 83.90.129.191
+RewriteEngine On
+RewriteRule ^$ /curriculum-vitae/ [L]
